<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Debugger</string>
    <string name="log_name">Log</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_debugger">Debugger</string>
    <string name="General_title">General</string>
    <string name="Kernal_log">logcat(main and kernel)</string>
    <string name="Logcat">Main log</string>
     <string name="system">System log</string>
    <string name="radio">logcat_radio </string>
    <string name="events">logcat_events </string>
    <string name="combine_general">Combine General Log </string>
    <string name="modem">Modem</string>
    <string name="audio">Audio</string>
    <string name="power">Power</string>
    <string name="others">Others</string>
    <string name="memory_disk">Memory &amp; Disk &amp; CPU</string>
     <string name="power_log">Power Log</string>
     <string name="meminfo_log">Memory Information</string>
     <string name="battery_log">Battery Log</string> 
     <string name="gauage_log_level">Battery Gauge Level</string>
     <string name="gauage_log_level_0">Gauge Level 0</string>
     <string name="gauage_log_level_4">Gauge Level 4</string>
      <string name="gauage_log_level_8">Gauge Level 8</string>
       <string name="gauage_log_level_12">Gauge Level 12</string>
       <string name="log_level_default">Default</string> 
     <string name="log_level_verbose">Verbose</string>
     <string name="log_level_debug">Debug</string>
     <string name="log_level_Info">Info</string>
     <string name="log_level_warn">Warn</string>
     <string name="log_level_critical">Critical</string> 
       
         <string name="unit_hour">單位:時</string>
          <string name="unit_minute">單位:分</string>
           <string name="unit_second">單位:秒</string>
           <string name="time_intervel_default_title">Time intervel :</string>
     <string name="modem_level_bb">Diag.cfg for modem, audio and GPS</string>
    <string name="modem_level_bb_3g">Diag.cfg for modem and audio</string>
     <string name="modem_level_bb_3g_digrf">Diag.cfg for GPS only</string>
     <string name="disk_log">Disk Log</string>
     <string name="top_log">Top Log</string>
     <string name="procrank_log">Procrank Log</string>
      <string name="activity_log">Activity Log</string>
      <string name="camera_dump">Camera Dump</string>
      <string name="window_log">Window Log</string>
      <string name="uartlog_log">Uartlog_log</string>
       <string name="usb_diag">Usb_diag</string>
      <string name="cpu_log">Cpu Information</string>
      <string name="cpu_loading_log">Cpu Loading</string>
     <string name="audio_log">Audio Log</string>
     <string name="title_enable_tcpdump">Enable tcpdump</string>
    <string name="usb_switch">Usb Switch</string>
    <string name="network">Network</string>
     <string name="Wifi_log">Wifi Log</string>
      <string name="log_upLoad">Log UpLoad</string>
    <string name="QPSTDownloadMode">QPST Download Mode</string>
        <string name="bluetooth_log">BT Log</string>
     <string name="output_log">Output Log Files to SDCARD</string>
     <string name="upload_log">Upload Log Files to Server</string>
      <string name="write_to_sdcard_log">Write log to Micro SDCARD</string>
  	<string name="crash_reminder">Crash Reminder</string>
  	<string name="output_clear">Output and Clear</string>
  	<string name="select_all">Select All</string>
  	<string name="deselect_all">Deselect All</string>
  	<string name="mo_mt">I2S audio log</string>
  	<string name="Modem_log_state">Check Log State</string>
       <string name="no_thing">Waiting for Command</string>
    
    <string name="cancel">Cancel</string>
    <string name="clear_log">Clear log</string>
    <string name="auto_update_log">Auto Update Log Folder</string>
    <string name="default_log">Restore Default Log</string>
    <string name="add_tag">add tag to log</string>
    <string name="version_number">201606230000</string>
    <string name="rotate_num">Reset</string>
    <string name="at_plus">AT+</string>
    <string name="title_activity_atcommand">Asus AT Command</string>
    <string name="content">content</string>
    <string name="title_enable_capture">1.1 Enable capture logcat</string>
    <string name="summary_enable_capture">Start capturing logcat, including system, main, radio, event</string>
    <string name="summary_enable_coredump">Modem coredump Enable</string>
    <string name="title_enable_klog">1.2 Enable capture kernel</string>
    <string name="title_detail_qcril_log">1.3 Enable detail ril Log</string>
    <string name="title_system_dump">1.4 Enable system ramdump</string>
    <string name="summary_enable_detail_qcril_log">Will re-start ril daemon</string>
    <string name="summary_enable_klog">Start capturing kernel log</string>
    <string name="title_usb_export_diag">3.1 USB export diag port</string>
    <string name="title_usb_switch2modem">USB switch to modem</string>
    <string name="title_modem_log_tool">Modem Extra Log Tool</string>
    <string name="title_Offline_logging_over_HSI">Offline logging over HSI</string>
    <string name="title_ftm">2.4 FTM</string>
    <string name="title_atcmdsender">Modem crash ramdump</string>
    <string name="title_enable_modem_dump">Modem dump</string>
     <string name="title_modem_size">Modem dump Size </string>
     <string name="title_modem_setting">Modem dump Setting</string>
      <string name="title_modem_audio">Modem Audio</string>
    <string name="title_enable_qxdm_log">2.1 Enable QXDM log</string>
    <string name="title_file_size">選擇每個Modem檔案大小 :</string>
      <string name="title_file_unit_size">(單位：M) </string>
    <string name="title_file_micro_sdcard">外部空間 :</string>
    <string name="title_file_externel_sdcard">內部空間 :</string>
    <string name="hint_currentfile_size">目前每個檔案大小為：%dM</string>
  
    <string name="title_file_count">Modem 檔案個數： </string>
     <string name="hint_file_count">目前檔案個數為：%d </string>
     <string name="auto_audio_pcm">Diag.cfg for audio only</string>
     <string name="auto_audio_i2s">Auto Audio I2S Log</string>
     <string name="auto_audio_i2s_pcm">enable modem crash ramdump</string>
     <string name="message_run_out">Runs out of disk space.\nWhen disk space is lower than %dMB,all running log will close.</string>
    <string name="system_at_proxy_2">persist.system.at-proxy.mode 2</string>
    <string name="system_at_proxy_0">persist.system.at-proxy.mode 0</string>
    
    <string name="title_enable_QPSTDownloadMode_log">Enable Download Mode</string>
    <string name="title_enable_auto_upload_logs">Auto Upload logs</string>
    <string name="title_enable_upload_logs">Enable Upload logs</string>
    <string name="title_enable_disk_low_reminder">Disk Low Reminder</string>
    <string name="device_model_title">Model Number:</string>
    <string name="sku_info_title">SKU Info:</string>
    <string name="build_number_title">Build:</string>
    <string name="baseband_version_title">Baseband Version:</string>
    <string name="network_title">Network:</string>
    <string name="unknown">Unknown</string>
    <string name="logtool_capture_enabled">Capture log enabled.</string>
    <string name="logtool_capture">Capture Log</string>
    <string name="tcpdump_enabled">Tcpdump log enabled.</string>
    <string name="modem_log_enabled">QCOM modem log enabled.</string>
    <string name="modem_log_title">QCOM Modem Log</string>
    <string name="report_bug_text">Please help to report bug!</string>
    <string name="bug_on_title">Bug on!</string>
    <string name="btn_collect">Collect Logs</string>
    <string name="title_activity_atcmdsender">AT Command Sender</string>
    <string name="title_activity_ftm">FTM</string>
    <string name="ok" />
    <string name="at">AT+</string>
    <string name="atadd">AT+</string>
    <string name="equal">=</string>
    <string name="que">\?</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="load">Load</string>
    <string name="about">About</string>
    <string name="hello">Hello World, FTMode</string>
    <string name="sim_file_result_screen_title">SIM File Data</string>
    <string name="sim_file_data_title">SIM</string>
    <string name="sim_file_name_prefix"><b>Name:</b></string>
    <string name="sim_file_content_prefix"><b>Content:</b></string>
    <string name="ef_iccid"><b>EF-ICCID</b></string>
    <string name="ef_msisdn"><b>EF-MSISDN</b></string>
    <string name="ef_cphs"><b>EF-CPHS</b></string>
    <string name="ef_3gpp"><b>EF-3GPP</b></string>
    <string name="ef_hpplmn"><b>EF_HPPLMN</b></string>
    <string name="ef_loci"><b>EF-LOCI</b></string>
    <string name="ef_gprs_loci"><b>EF-GPRS/PS-LOCI</b></string>
    <string name="ef_acc"><b>EF-ACCESS CONTROL CLASS</b></string>
    <string name="ef_ad"><b>EF-ADMINISTRATIVE DATA</b></string>
    <string name="ef_fplmn"><b>EF-FPLMN</b></string>
    <string name="ef_ahplmn"><b>EF-ACTING HPLMN</b></string>
    <string name="ef_rat"><b>EF-RAT MODE</b></string>
    <string name="ef_pnn"><b>EF-PLMN NETWORK NAME</b></string>
    <string name="ef_opl"><b>EF-OPERATOR PLMN LIST</b></string>
    <string name="ef_plmn_sel"><b>EF-PLMN SELECTOR</b></string>
    <string name="ef_oplmn_act"><b>EF-OPLMNAcT</b></string>
    <string name="ef_ims"><b>EF-IMS</b></string>
    <string name="copy_ef"><b>Copy EF</b></string>
    <string name="button_refresh">Refresh</string>
    
    <string name="light_log_on_off">Open Log</string>
    <string name="pug_config_on_off">Pug Open</string>
    <string name="wakelock">wakelockLog</string>
    <string name="Compact_log">Diag.cfg for modem compact logging</string>
    <string name="QMESA">QMESA</string>
    <string name="memory">Memory test</string>
    <string name="qmesa_time">选择测试时间</string>
    <string name="qmesa_time_unit">(单位 S)</string>
    <string name="qmesa_start">qmesa_start</string>
    <string name="qmesa_setTime">设置测试时长（秒）</string>
    <string name="memory_test">memory test</string>
    <string name="start">开始测试</string>
    <string name="setTime">设置测试时长（秒）</string>
    <string name="qmesa_reset">重置</string>
    <string name="modemcrash">make modem crash</string>
    <string name="title_enable_modem_cfg">modem GCF</string>
    <string name="set_cmd">Set Command</string>
    <string name="cmd_example">for example: （0x4b 0x25 0x03 0x00 0x02）or (75 37 3 0 2) </string>
</resources>
