<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_deselectall"
        android:icon="@drawable/deselect"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/deselect_all"/>
    <item
        android:id="@+id/action_default_log"
        android:icon="@drawable/log_restore"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/default_log"/>
    <item
        android:id="@+id/action_output_log"
        android:icon="@drawable/output_file"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/output_log"/>
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/clear_log"/>
    <item
        android:id="@+id/action_write_to_removable_sdcard"
        android:icon="@drawable/sdcard_off"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/write_to_sdcard_log"/>
    <item
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="">
        <menu>
            <item
                android:id="@+id/action_selectall"
                android:icon="@drawable/selectall"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/select_all"/>
            <item
                android:id="@+id/action_crash_reminder"
                android:checkable="true"
                android:checked="false"
                android:icon="@drawable/dead"
                android:title="@string/crash_reminder"/>
            <item
                android:id="@+id/action_output_clear"
                android:checkable="true"
                android:checked="false"
                android:icon="@drawable/output_file_clear"
                android:title="@string/output_clear"/>
            <item
                android:id="@+id/action_output_upload"
                android:icon="@drawable/upload"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/upload_log"/>
            <item
                android:id="@+id/action_auto_upload"
                android:checkable="true"
                android:checked="false"
                android:icon="@drawable/auto_upload"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/title_enable_auto_upload_logs"/>
             <item
                android:id="@+id/action_enable_upload"
                android:checkable="true"
                android:checked="false"
                android:icon="@drawable/auto_upload"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/title_enable_upload_logs"/>
            <item
                android:id="@+id/action_disk_low_reminder"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/clear_disk_reminder"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/title_enable_disk_low_reminder"/>
            <item
                android:id="@+id/action_auto_refresh_mtp"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/folder_refresh"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/auto_update_log"/>
            <item
                android:id="@+id/action_add_tag"
                android:icon="@drawable/add_comment"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/add_tag"/>
            <item
                android:id="@+id/action_rotate_num"
                android:icon="@drawable/log_rotation"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/rotate_num"/>
            <!--  
            <item
                android:id="@+id/memory_test"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/memory_test"/>
			-->
            <item
                android:id="@+id/action_version"
                android:orderInCategory="100"
                android:showAsAction="always"
                android:title="@string/version_number"/>
        </menu>
    </item>

</menu>