<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<CheckBox
	    android:id="@+id/check_combine_main"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logcat"
        android:layout_marginTop="10dp"
	    />
	<CheckBox
	    android:id="@+id/check_combine_system"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/system"
         android:layout_marginTop="10dp"
	    />
	<CheckBox
	    android:id="@+id/check_combine_kernel"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kernal_log"
         android:layout_marginTop="10dp"
	    />
	<CheckBox
	    android:id="@+id/check_combine_radio"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio"
         android:layout_marginTop="10dp"
	    />
	<CheckBox
	    android:id="@+id/check_combine_events"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:layout_marginTop="10dp"
	    />
</LinearLayout>
