<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >
    
	<TextView 
 	    android:id="@+id/titletime"
 	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_intervel_default_title" 
         android:layout_marginTop="10dp"
         android:textSize="@dimen/select_time_intervel_text_size"
          android:layout_marginLeft="10dp"
 	    />
 	 	<LinearLayout
                android:id="@+id/tabtime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                 <EditText
			        android:id="@+id/hour_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:hint="@string/unit_hour"
			        android:inputType="number"
			        android:textSize="@dimen/select_time_intervel_text_size" />
                
                 <EditText
			        android:id="@+id/minute_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:hint="@string/unit_minute"
			        android:inputType="number"
			        android:textSize="@dimen/select_time_intervel_text_size" />
                
               <EditText
			        android:id="@+id/second_edit"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:hint="@string/unit_second"
			        android:inputType="number"
			        android:textSize="@dimen/select_time_intervel_text_size" />
            </LinearLayout>
</LinearLayout>